<resources>
    <string name="app_name">Motion Is Health</string>
    <string name="login_email">Correo</string>
    <string name="login_password">Contraseña</string>
    <string name="login_login">Acceder</string>
    <string name="login_rememberAccount">Recordar cuenta</string>
    <string name="login_error_invalidEmail">Correo electrónico no válido.</string>
    <string name="login_error_invalidPassword">Contraseña no válida. Tienen que coincidir y tener un tamaño mayor de 6 caracteres</string>
    <string name="login_register">Registro</string>
    <string name="login_repeatPassword">Repite la contraseña</string>
    <string name="login_creatingAccount">Se está creando su cuenta...</string>
    <string name="login_creatingAccountCompleted">Cuenta creada con éxito</string>
    <string name="login_error_registerError">Error al crear el registro</string>
    <string name="login_error_loginError">Error al logear el usuario. Compruebe su email y contraseña</string>
    <string name="sideMenu_options_home">Principal</string>
    <string name="sideMenu_options_routines">Rutinas</string>
    <string name="sideMenu_options_logout">Cerrar sesión</string>
    <string name="fragments_titles_details">Detalles de rutina</string>
    <string name="fragments_workout_list_noWorkouts">Aún no tienes rutinas creadas</string>
    <string name="fragments_workout_list_deleteDialogTitle">Borrando rutina</string>
    <string name="fragments_workout_list_deleteDialogMessage">¿Esta seguro que desea borrar la rutina?</string>
    <string name="fragments_details_exerciseNameHeader">Ejercicio</string>
    <string name="fragments_details_exerciseRepsHeader">Repeticiones</string>
    <string name="fragments_details_exerciseSetsHeader">Series</string>
    <string name="fragments_create_edit_name">Nombre</string>
    <string name="fragments_create_edit_description">Descripción</string>
    <string name="fragments_create_edit_et">Duración aproximada en minutos</string>
    <string name="fragments_create_edit_difficulty">Dificultad</string>
    <string name="fragments_create_edit_difficulty_easy">Fácil</string>
    <string name="fragments_create_edit_difficulty_medium">Medio</string>
    <string name="fragments_create_edit_difficulty_hard">Difícil</string>
    <string name="fragments_create_edit_title">Creación de rutina</string>
    <string name="fragments_create_edit_title_edit">Modificando rutina</string>
    <string name="fragments_create_edit_error_name">Introduce un nombre de rutina</string>
    <string name="fragments_create_edit_error_description">Introduce una descripción</string>
    <string name="fragments_create_edit_error_et">Introduce un tiempo estimado</string>
    <string name="fragments_create_edit_error_et_zero">No se puede hacer una rutina en 0 minutos. Ojalá.</string>
    <string name="fragments_create_edit_error_et_too_long">No se puede hacer una rutina tan larga.</string>
    <string name="fragments_create_edit_error_difficulty">Selecciona una dificultad</string>
    <string name="fragments_create_edit_error_exercises">Crea al menos un ejercicio</string>
    <string name="fragments_create_edit_error_exercises_no_name">Pon un nombre al ejercicio</string>
    <string name="fragments_create_edit_error_exercises_too_long">Revisa las series y repeticiones</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
